force-app/main/default/objects/Project_Work_Log__c/Project_Work_Log__c.object-meta.xml
<CustomObject>
    <label>Project Work Log</label>
    <nameField>
        <displayFormat>PWL-{0000}</displayFormat>
        <label>Project Work Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Work Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>