force-app/main/default/objects/Project_Work_Log__c/fields/Chatter_Feed_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Feed_Item_ID__c</fullName>
    <label>Chatter Feed Item ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>