force-app/main/default/objects/Project_Work_Log__c/fields/Hours_Logged__c.field-meta.xml
<CustomField>
    <fullName>Hours_Logged__c</fullName>
    <label>Hours Logged</label>
    <precision>6</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>