force-app/main/default/objects/Project_Work_Log__c/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Project Work Logs (Parent Project)</relationshipLabel>
    <relationshipName>Project_Work_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>