force-app/main/default/objects/Project_Work_Log__c/fields/Time_Display__c.field-meta.xml
<CustomField>
    <fullName>Time_Display__c</fullName>
    <formula>IF(
    FLOOR(Hours_Logged__c) &gt; 0,
    TEXT(FLOOR(Hours_Logged__c)) &amp; &quot; hour&quot; &amp; 
    IF(FLOOR(Hours_Logged__c) &gt; 1, &quot;s&quot;, &quot;&quot;) &amp; 
    IF(ROUND(MOD(Hours_Logged__c * 60, 60), 0) &gt; 0, &quot; and &quot;, &quot;&quot;),
    &quot;&quot;
) &amp;
IF(
    ROUND(MOD(Hours_Logged__c * 60, 60), 0) &gt; 0,
    TEXT(ROUND(MOD(Hours_Logged__c * 60, 60), 0)) &amp; &quot; minute&quot; &amp; 
    IF(ROUND(MOD(Hours_Logged__c * 60, 60), 0) &gt; 1, &quot;s&quot;, &quot;&quot;),
    IF(FLOOR(Hours_Logged__c) = 0, &quot;0 minutes&quot;, &quot;&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Display</label>
    <type>Text</type>
</CustomField>