force-app/main/default/objects/Project_Work_Log__c/fields/Work_Description__c.field-meta.xml
<CustomField>
    <fullName>Work_Description__c</fullName>
    <label>Work Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>