force-app/main/default/objects/Project_Work_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Type_of_Work__c</columns>
    <columns>Hours_Logged__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project__c</columns>
    <columns>Work_Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>