force-app/main/default/objects/Project_Work_Log__c/listViews/Work_Logs_with_Parent_Projects.listView-meta.xml
<ListView>
    <fullName>Work_Logs_with_Parent_Projects</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Type_of_Work__c</columns>
    <columns>Hours_Logged__c</columns>
    <columns>Parent_Project__c</columns>
    <columns>Project__c</columns>
    <columns>Work_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Project__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Work Logs with Parent Projects</label>
</ListView>